Fixed alignment of back button

--- a/app/app.scss
+++ b/app/app.scss
@@ -158,6 +158,10 @@ $tertiary-color-lighten: lighten( $tertiary-color, 5% );
   text-align: center;
 };
 
+#register-back-btn  {  
+  margin-left: 2em;
+  };
+
 // MAIN VIEW COMPONENTS:
 
 .push {
